--- a/index.html
+++ b/index.html
@@ -54,16 +54,19 @@
 								<a href="./online-casinos.html">Online Casinos</a>
 								<ul class="header__sublist">
 									<li class="header__subitem">
-										<a href="#">Recommended</a>
+										<a href="./online-casinos.html?category=best-online-casinos-au">Best online casinos Australia</a>
 									</li>
 									<li class="header__subitem">
-										<a href="#">Mobile apps casino</a>
+										<a href="./online-casinos.html?category=recommended-casinos">Recommended</a>
 									</li>
 									<li class="header__subitem">
-										<a href="#">Best live Casinos</a>
+										<a href="./online-casinos.html?category=mobile-apps-casino">Mobile apps casino</a>
 									</li>
 									<li class="header__subitem">
-										<a href="#">Payment Methods 
+										<a href="./online-casinos.html?category=best-live-casinos">Best live Casinos</a>
+									</li>
+									<li class="header__subitem">
+										<a href="./online-casinos.html?category=payid">Payment Methods 
 											<svg width="6" height="10" viewBox="0 0 6 10" fill="none" xmlns="http://www.w3.org/2000/svg">
 												<line x1="1" y1="8.58579" x2="4.58585" y2="4.99993"  stroke-width="2" stroke-linecap="round"/>
 												<line x1="1" y1="-1" x2="6.07116" y2="-1" transform="matrix(0.707107 0.707107 0.707107 -0.707107 1 0)"stroke-width="2" stroke-linecap="round"/>
@@ -71,16 +74,16 @@
 										</a>
 										<ul class="header__underlist">
 											<li class="header__underitem">
-												<a href="#">PayId</a>
+												<a href="./online-casinos.html?category=payid">PayId</a>
 											</li>
 											<li class="header__underitem">
-												<a href="#">Credit cards</a>
+												<a href="./online-casinos.html?category=credit-cards">Credit cards</a>
 											</li>
 											<li class="header__underitem">
-												<a href="#">Crypto</a>
+												<a href="./online-casinos.html?category=crypto">Crypto</a>
 											</li>
 											<li class="header__underitem">
-												<a href="#">Neosurf</a>
+												<a href="./online-casinos.html?category=neosurf">Neosurf</a>
 											</li>
 										</ul>
 									</li>
