--- a/online-casinos.html
+++ b/online-casinos.html
@@ -184,8 +184,8 @@
                         Best Online Casinos
                     </h3>
                     <div class="best-casinos__block">
-                        <div class="best-casinos__btns">
-                            <button class="best-casinos__btn active" data-filter="all">
+                        <div class="best-casinos__btns best-casinos__filter">
+                            <button class="best-casinos__btn" data-filter="best-online-casinos-au">
                                 <svg width="50" height="48" viewBox="0 0 50 48" fill="none" xmlns="http://www.w3.org/2000/svg">
                                     <path d="M49.9759 16.7254C49.7905 20.5158 48.2663 23.951 45.8791 26.5802C45.7098 26.7818 45.5243 26.9752 45.3308 27.1689C45.1372 27.3623 44.9437 27.5477 44.7421 27.7174C42.1131 30.1045 38.6776 31.6205 34.8873 31.8059C34.6211 31.8221 34.355 31.83 34.0809 31.83C33.8631 31.83 33.6373 31.8221 33.4195 31.8138C33.3711 31.8138 33.3228 31.8059 33.2744 31.8059C32.7824 31.7815 32.2986 31.7331 31.8228 31.6689V31.3464C31.8228 23.9341 26.7702 17.6809 19.8228 15.911C19.2825 15.774 18.7341 15.6689 18.1777 15.5886C18.1858 15.04 18.2261 14.5077 18.2906 13.9757C18.6857 10.6286 20.1293 7.61275 22.2745 5.24974C22.6182 4.87603 23.0417 4.44544 23.4196 4.11253C26.0487 1.7255 29.4841 0.209485 33.2744 0.0240199C33.8168 -0.0088894 34.374 -0.00711153 34.8873 0.0240199C42.9695 0.420341 49.574 6.89959 49.9759 15.1125C50.0072 15.6288 50.0092 16.1605 49.9759 16.7254Z" fill="#FFD550"/>
                                     <path d="M27.7178 42.0082C27.3629 42.4114 26.9839 42.7906 26.5807 43.1454C23.9436 45.5324 20.5081 47.0484 16.7178 47.2339C16.1906 47.2659 15.6327 47.2659 15.1049 47.2339C11.3227 47.0484 7.88725 45.5403 5.25015 43.1454C4.84693 42.7906 4.46792 42.4114 4.10496 42.0082C-1.34338 35.969 -1.3893 26.7678 4.10496 20.6777C4.45985 20.2745 4.84693 19.8957 5.25015 19.5409C7.88725 17.1456 11.3227 15.6374 15.1049 15.452C15.6322 15.42 16.19 15.42 16.7178 15.452C20.5 15.6374 23.9355 17.1456 26.5726 19.5409C26.9758 19.8957 27.3629 20.2745 27.7178 20.6777C33.2059 26.7612 33.1724 35.9618 27.7178 42.0082Z" fill="#EFEFEF"/>
@@ -215,7 +215,7 @@
                                     Best online casinos Australia
                                 </span>
                             </button>
-                            <button class="best-casinos__btn" data-filter="best">
+                            <button class="best-casinos__btn" data-filter="recommended-casinos">
                                <svg width="50" height="51" viewBox="0 0 50 51" fill="none" xmlns="http://www.w3.org/2000/svg">
                                     <path d="M49.9998 20.4508C49.9998 20.4914 49.9998 20.531 49.9988 20.5716H43.5831C43.5842 20.5393 43.5842 20.506 43.5842 20.4737C43.5863 18.6661 43.2335 16.8759 42.5459 15.2059C41.8584 13.5359 40.8496 12.0189 39.5776 10.7422L39.588 10.7318L39.6491 10.6704L44.1205 6.17224C45.9873 8.04517 47.4678 10.2708 48.4768 12.7212C49.4858 15.1716 50.0034 17.7985 49.9998 20.4508Z" fill="#F49D44"/>
                                     <path d="M43.6354 20.5718H49.9993C49.9755 25.8654 47.8791 30.9364 44.1644 34.6858L39.6382 30.1325C42.1462 27.5877 43.5627 24.1553 43.5836 20.5718H43.6354Z" fill="#FFDA39"/>
@@ -232,7 +232,7 @@
                                    Recommended casinos
                                 </span>
                             </button>
-                            <button class="best-casinos__btn" data-filter="new">
+                            <button class="best-casinos__btn" data-filter="mobile-apps-casino">
                                 <svg width="50" height="59" viewBox="0 0 50 59" fill="none" xmlns="http://www.w3.org/2000/svg">
                                     <path fill-rule="evenodd" clip-rule="evenodd" d="M31.3979 53.2741C29.508 54.474 27.6382 55.6339 26.9982 55.9739C19.3487 60.1136 4.83968 59.0537 1.15992 49.6043C-0.469969 45.4146 -0.219985 41.2848 0.909939 36.9951C1.49812 34.822 2.23994 32.6934 3.12979 30.6255C5.08966 25.9758 5.9996 14.9465 5.9996 9.89676V9.50679C5.98237 8.38674 6.41695 7.30696 7.20526 6.51112C7.99357 5.71528 9.06917 5.27046 10.1893 5.27705C10.4634 5.28943 10.7351 5.33304 10.9993 5.40704L31.3979 53.2741Z" fill="#F9C795"/>
                                     <path fill-rule="evenodd" clip-rule="evenodd" d="M40.9974 6.86708L44.7572 4.71722C46.436 3.7563 48.5759 4.33829 49.5369 6.01714C50.4978 7.69598 49.9158 9.83592 48.2369 10.7968L41.2374 14.7966C41.1614 14.8414 41.081 14.8783 40.9974 14.9066L38.9976 10.2569L40.9974 6.86708Z" fill="#F9C795"/>
@@ -263,7 +263,7 @@
                                     Mobile apps casino
                                 </span>
                             </button>
-                            <button class="best-casinos__btn" data-filter="popular">
+                            <button class="best-casinos__btn" data-filter="best-live-casinos">
                                 <svg width="50" height="41" viewBox="0 0 50 41" fill="none" xmlns="http://www.w3.org/2000/svg">
                                     <path d="M24.7803 27.8537L7.80105 32.4032C7.28034 32.5428 6.74476 32.2338 6.60514 31.7127L0.0335405 7.18719C-0.106078 6.6661 0.202914 6.13089 0.724003 5.99128L17.7033 1.44147C18.2244 1.30186 18.7596 1.61123 18.8992 2.13194L25.4708 26.6575C25.6104 27.1785 25.3014 27.7141 24.7803 27.8537Z" fill="#62DAFA"/>
                                     <path d="M24.7802 27.8537L10.0649 31.7966C9.54386 31.9362 9.00866 31.6273 8.86904 31.1062L2.29706 6.58065C2.15782 6.05956 2.46681 5.52397 2.9879 5.38436L17.7031 1.44147C18.2242 1.30186 18.7594 1.61123 18.8991 2.13194L25.4707 26.6574C25.6103 27.1785 25.3013 27.7141 24.7802 27.8537Z" fill="#98E5FB"/>
@@ -290,8 +290,8 @@
                                     Best live Casinos
                                 </span>
                             </button>
-							<div class="best-casinos__btn best-casinos__btn-best" data-filter="popular">
-                            <button class="best-casinos__btn-content" data-filter="popular">
+							<div class="best-casinos__btn-best">
+                            <button class="best-casinos__btn-content filter-dropdown__toggle">
                                 <svg width="50" height="51" viewBox="0 0 50 51" fill="none" xmlns="http://www.w3.org/2000/svg">
                                     <path d="M50 25.9832V45.8623C50 48.2897 48.0323 50.2494 45.6129 50.2494L4.3871 50.2413C1.96774 50.2413 0 48.2736 0 45.8542V25.9752C0 23.5478 1.96774 21.5881 4.3871 21.5881L45.6048 21.5961C48.0323 21.5961 50 23.5639 50 25.9832Z" fill="#95B8DD"/>
                                     <path d="M48.0967 43.9106C47.6612 43.9106 47.3145 43.5639 47.3145 43.1284V37.2574C47.3145 36.83 47.6612 36.4752 48.0967 36.4752C48.5322 36.4752 48.879 36.8219 48.879 37.2574V43.1284C48.879 43.5639 48.5322 43.9106 48.0967 43.9106Z" fill="#6A81B8"/>
@@ -308,23 +308,23 @@
                                     Payment Methods 
                                 </span>
                             </button>
-							<div class="best-casinos__links-payment">
-								<button class="best-casinos__link-payment">
+							<div class="best-casinos__links-payment filter-dropdown__menu">
+								<button  class="best-casinos__link-payment filter-btn" data-filter="payid">
 									PayId
 								</button>
-								<button class="best-casinos__link-payment">
+								<button class="best-casinos__link-payment filter-btn" data-filter="credit-cards">
 									Credit cards
 								</button>
-								<button class="best-casinos__link-payment">
+								<button class="best-casinos__link-payment filter-btn" data-filter="crypto">
 									Crypto
 								</button>
-								<button class="best-casinos__link-payment">
+								<button class="best-casinos__link-payment filter-btn" data-filter="neosurf">
 									Neosurf
 								</button>
 								</div>
 							</div>
                         </div>
-                        <div class="best-casinos__items">
+                        <div class="best-casinos__list">
                             <div class="best-casinos__item">
                                 <div class="best-casinos__left">
                                     <img class="best-casinos__img" src="./img/partners/caswino.webp" alt="1" />
@@ -1275,11 +1275,10 @@
 							</ul>
 						</nav>
 		</div>
-		<script type="module" src="./js/main.js"></script>
-		<script type="module" src="./js/slider.js"></script>
 		<script type="module" src="./js/email.js"></script>
 		<script type="module" src="./js/list.js"></script>
 		<script type="module" src="./js/clickBanner.js"></script>
 		<script type="module" src="./js/list-mobile.js"></script>
+		<script type="module" src="./js/bestCasinos.js"></script>
 	</body>
 </html>
