--- a/online-casinos.html
+++ b/online-casinos.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<link rel="canonical" href="https://pokies24.io/">
+		<link rel="canonical" href="https://pokies24.io/online-casinos">
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 		<link
@@ -13,8 +13,40 @@
 		<link rel="stylesheet" href="./css/reset.css" />
 		<link rel="stylesheet" href="./css/style.css" />
         <link rel="stylesheet" href="./css/online-casinos.css" />
-		<meta name="description" content="Play top-rated free online pokies in Australia without registration. Read honest reviews, try free demos, and choose the right game for real money.">
-		<title>Best Online Pokies in Australia | Free Demos & Casino Reviews</title>
+		<meta name="description" content="See what bonuses are given, which pokies are trendy on each casino, and read our expert reviews along with real user feedback.">
+		<title>Best Online Casinos Australia Listing | Reviews & Offers</title>
+		<script type="application/ld+json">
+			{
+			"@context": "https://schema.org",
+			"@type": "FAQPage",
+			"mainEntity": [
+				{
+				"@type": "Question",
+				"name": "What are the most popular providers in Australia?",
+				"acceptedAnswer": {
+					"@type": "Answer",
+					"text": "The supplier landscape in Australia includes several notable names. Aristocrat is one of Australia’s most recognised gaming companies, best known for land-based pokies and an expanding digital presence. Pragmatic Play provides many online pokies and live games. Offshore casinos that take Australian players often show its games. NetEnt, Microgaming, Big Time Gaming, Red Tiger along with Evolution are other providers often present. Evolution offers live casino content. The presence of known providers is a good sign for a casino's game collection."
+				}
+				},
+				{
+				"@type": "Question",
+				"name": "What should I do if I find incorrect information about a casino on the pokies24.io website?",
+				"acceptedAnswer": {
+					"@type": "Answer",
+					"text": "If you notice incorrect or outdated data on pokies24.io, please contact our support team at info@pokies24.io. We try to keep all listings current. We welcome corrections. You should provide the specific page link and the data that needs updating. We then verify and correct the information quickly."
+				}
+				},
+				{
+				"@type": "Question",
+				"name": "How can I choose an online casino if I am new to gambling?",
+				"acceptedAnswer": {
+					"@type": "Answer",
+					"text": "To choose an online casino, if you are new to gambling, start by trying games in demo mode. On our freepokies page you can play demo versions without depositing. Demo play lets you learn game mechanics, volatility and how bonus features behave. Once you know which games you enjoy, check the online casinos page where we publish casinos that offer those games and providers. There you can compare casinos and bonuses and choose the one that best fits your style and budget. Playing demos first is a safe way to build familiarity before staking real money."
+				}
+				}
+			]
+			}
+		</script>
 	</head>
 	<body>
 		<header class="header">
@@ -167,9 +199,9 @@
                             <span> > </span>
                             <a href="./online-casinos.html">Online Casinos</a>
                         </div>
-                        <h2 class="up-section__title">
+                        <h1 class="up-section__title">
                             Best Online casinos Australia
-                        </h2>
+                        </h1>
                         <p class="up-section__text">
                            The following listing only includes carefully selected Australian online casinos. Each platform provides fair condition for pokies fans, such as smooth gameplay, safe transactions, and reliable licensing.
                         </p>
@@ -180,9 +212,9 @@
         <section class="best-casinos">
             <div class="container">
                 <div class="best-casinos__wrapper">
-                    <h3 class="best-casinos__title">
+                    <h2 class="best-casinos__title">
                         Best Online Casinos
-                    </h3>
+                    </h2>
                     <div class="best-casinos__block">
                         <div class="best-casinos__btns best-casinos__filter">
                             <button class="best-casinos__btn" data-filter="best-online-casinos-au">
@@ -599,7 +631,7 @@
         <section class="text-block section">
 			<div class="container">
 				<div class="wrapper__text-block wrapper-blue-text-block">
-					<h3 class="title__text-block">What should you do if you have doubts about the reliability of a casino?</h3>
+					<h2 class="title__text-block">What should you do if you have doubts about the reliability of a casino?</h2>
 					<p class="text__text-block">If anything seems unreliable, take the steps before you deposit real money:</p>
                     <div class="block-mark__text-block">
 						<img src="./img/check.svg" alt="" />
@@ -894,7 +926,7 @@
 				</div>
 			</div>
 		</section>
-        		<section class="faq section">
+        		<section class="faq section" aria-label="Frequently Asked Questions">
 			<div class="container">
 				<div class="faq__wrapper">
 					<h2 class="faq__title">Frequently Asked Questions</h2>
