--- a/disclaimer.html
+++ b/disclaimer.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<link rel="canonical" href="https://pokies24.io/">
+		<link rel="canonical" href="https://pokies24.io/disclaimer">
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 		<link
@@ -12,8 +12,8 @@
 		/>
 		<link rel="stylesheet" href="./css/reset.css" />
 		<link rel="stylesheet" href="./css/style.css" />
-		<meta name="description" content="Play top-rated free online pokies in Australia without registration. Read honest reviews, try free demos, and choose the right game for real money.">
-		<title>Best Online Pokies in Australia | Free Demos & Casino Reviews</title>
+		<meta name="description" content=" Read our disclaimer to understand affiliate relationships, legal responsibility, and accuracy of published information.">
+		<title>Disclaimer | Content Responsibility - Pokies24.io</title>
 	</head>
 	<body>
 		<header class="header">
@@ -165,7 +165,7 @@
 						<span>></span>
 						<a href="./disclamer.html" class="up-info__link">Disclaimer</a>
 					</div>
-					<h2 class="up-info__title">Disclaimer</h2>
+					<h1 class="up-info__title">Disclaimer</h1>
 				</div>
 			</div>
 		</section>
