--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<link rel="canonical" href="https://pokies24.io/">
+		<link rel="canonical" href="https:pokies24.io/privacy-policy">
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 		<link
@@ -12,8 +12,8 @@
 		/>
 		<link rel="stylesheet" href="./css/reset.css" />
 		<link rel="stylesheet" href="./css/style.css" />
-		<meta name="description" content="Play top-rated free online pokies in Australia without registration. Read honest reviews, try free demos, and choose the right game for real money.">
-		<title>Best Online Pokies in Australia | Free Demos & Casino Reviews</title>
+		<meta name="description" content="Review how pokies24.io collects and processes user data, including newsletter subscriptions and analytics. Learn what information we store, how it’s protected, and how users can manage their data preferences.">
+		<title>Privacy Policy & Data Collection on Pokies24.io</title>
 	</head>
 	<body>
 		<header class="header">
@@ -165,7 +165,7 @@
 						<span>></span>
 						<a href="./privacy-policy.html" class="up-info__link">Privacy Policy</a>
 					</div>
-					<h2 class="up-info__title">Privacy Policy</h2>
+					<h1 class="up-info__title">Privacy Policy</h1>
 				</div>
 			</div>
 		</section>
