--- a/404.html
+++ b/404.html
@@ -12,6 +12,7 @@
 		/>
 		<link rel="stylesheet" href="./css/reset.css" />
 		<link rel="stylesheet" href="./css/style.css" />
+
 		<meta name="description" content="Review how pokies24.io collects and processes user data, including newsletter subscriptions and analytics. Learn what information we store, how it’s protected, and how users can manage their data preferences.">
 		<title>Privacy Policy & Data Collection on Pokies24.io</title>
 	</head>
@@ -157,155 +158,27 @@
 				</div>
 			</div>
 		</header>
-		<section class="up-info section">
-			<div class="container">
-				<div class="up-info__wrapper">
-					<div class="up-info__line">
-						<a href="./" class="up-info__link">Home</a>
-						<span>></span>
-						<a href="./privacy-policy.html" class="up-info__link">Privacy Policy</a>
-					</div>
-					<h1 class="up-info__title">Privacy Policy</h1>
-				</div>
-			</div>
-		</section>
-				<section class="text-block section">
-			<div class="container">
-				<div class="wrapper__text-block">
-
-					<h2 class="title__text-block">1. Introduction</h2>
-					<p class="text__text-block last__element-text-block">
-						This Privacy Policy explains how pokies24.io collects, uses, and stores information from its visitors. By using this website, you agree to the practices described below. If you do not agree with any part of this policy, please do not use the website.
-					</p>
-					
-					<h2 class="title__text-block">2. What We Collect</h2>
-					<p class="text__text-block">
-						We collect the following types of data:
-					</p>
-                    <ul class="list-dot__text-block">
-						<li class="item__text-block">
-						    Technical information: IP address, browser type, device information, operating system, screen resolution, and language settings
-						</li>
-						<li class="item__text-block">
-							Usage data: Pages visited, time spent on the site, clicks, scrolls, and navigation behaviour
-						</li>
-						<li class="item__text-block">
-							Email address: Only when voluntarily submitted through the newsletter subscription form
-						</li>
-					</ul>
-                    <p class="text__text-block last__element-text-block">
-						This data is collected to understand how visitors interact with the website and to improve its performance and content.
-					</p>
-
-                    <h2 class="title__text-block">3. How We Collect Data</h2>
-					<p class="text__text-block">
-						We use the following tools and services to collect data:
-					</p>
-                    <ul class="list-dot__text-block">
-						<li class="item__text-block">
-						    Google Analytics 4 (GA4): Tracks user behaviour and provides insights into website usage
-						</li>
-						<li class="item__text-block">
-							MailerLite: Stores email addresses submitted through the subscription form and manages newsletter campaigns
-						</li>
-						<li class="item__text-block">
-							Hotjar (or similar tools): May be used to track heatmaps, clicks, and other engagement data in the future
-						</li>
-					</ul>
-                    <p class="text__text-block last__element-text-block">
-						All tools we use operate in accordance with their own privacy policies, which may involve storing data on external servers.
-					</p>
-
-                    <h2 class="title__text-block">4. Why We Collect Data</h2>
-					<p class="text__text-block">
-						We collect data for the following purposes:
-					</p>
-                    <ul class="list-dot__text-block">
-						<li class="item__text-block">
-						    To monitor website performance and user engagement
-						</li>
-						<li class="item__text-block">
-							To detect and prevent technical issues or misuse of the site
-						</li>
-						<li class="item__text-block">
-							To send newsletters to users who opt in via the subscription form
-						</li>
-                        <li class="item__text-block">
-							To improve website layout, structure, and content based on actual visitor behaviour
-						</li>
-					</ul>
-                    <p class="text__text-block last__element-text-block">
-						We do not collect or process any sensitive personal data such as names, addresses, or payment information.
-					</p>
-
-                    <h2 class="title__text-block">5. Email Subscriptions</h2>
-					<p class="text__text-block">
-						Users may choose to subscribe to email updates. When doing so, the only information collected is the email address provided voluntarily by the user.
-					</p>
-                    <p class="text__text-block">
-						We use MailerLite to manage subscriptions. All data is securely stored within MailerLite’s infrastructure. We do not sell, rent, or otherwise share this data with third parties.
-					</p>
-                    <p class="text__text-block last__element-text-block">
-						Each email we send contains an unsubscribe link. Users can opt out at any time.
-					</p>
-
-                    <h2 class="title__text-block">6. Cookies and Tracking</h2>
-					<p class="text__text-block">
-						Cookies are small text files that your browser stores when you visit a website. pokies24.io uses cookies to:
-					</p>
-                    <ul class="list-dot__text-block">
-						<li class="item__text-block">
-						    Identify returning visitors
-						</li>
-						<li class="item__text-block">
-							Track sessions and behaviour via analytics tools
-						</li>
-						<li class="item__text-block">
-							Provide functional features such as language settings or content preferences
-						</li>
-					</ul>
-                    <p class="text__text-block last__element-text-block">
-						You can control or disable cookies through your browser settings. Please note that some features of the website may not function correctly without cookies.
-					</p>
-
-                    <h2 class="title__text-block">7. Third-Party Links</h2>
-                    <p class="text__text-block last__element-text-block">
-						Our website may contain links to external websites, including online casinos. We are not responsible for the content or privacy practices of those websites. We advise you to review their privacy policies before providing any personal data.
-					</p>
-
-                    <h2 class="title__text-block">8. Data Protection</h2>
-                    <p class="text__text-block">
-						We take appropriate technical and organisational measures to protect collected data from unauthorised access, misuse, or loss. These measures include encryption, secure storage through MailerLite and Google, and restricted access by authorised personnel only.
-					</p>
-                    <p class="text__text-block last__element-text-block">
-						However, no method of data transmission or storage is completely secure. We cannot guarantee absolute protection of your data.
-					</p>
-
-                    <h2 class="title__text-block">9. Data Retention</h2>
-                    <p class="text__text-block">
-						We retain email data as long as a user remains subscribed. Users may unsubscribe at any time using the link provided in each email.
-					</p>
-                    <p class="text__text-block last__element-text-block">
-						Analytics and behavioural data are stored in aggregate format for internal reporting and will not be linked to individuals.
-					</p>
-
-                    <h2 class="title__text-block">10. Children’s Privacy</h2>
-                    <p class="text__text-block last__element-text-block">
-						pokies24.io is not intended for individuals under the age of 18. We do not knowingly collect personal data from minors. If we become aware that data has been collected from someone underage, we will delete it immediately.
-					</p>
-
-                    <h2 class="title__text-block">11. Updates to This Policy</h2>
-                    <p class="text__text-block last__element-text-block">
-						This Privacy Policy may be updated at any time without notice. The most recent version will always be available on this page. Continued use of the website implies acceptance of the current version of the policy.
-					</p>
-
-                    <h2 class="title__text-block">12. Contact</h2>
-                    <p class="text__text-block last__element-text-block">
-						If you have any questions about this Privacy Policy or your data, please contact us at: info@pokies24.io
-					</p>
-				</div>
-			</div>
-		</section>
+		<section class="up-section up-section-404">
+            <div class="container">
+                <div class="up-section__wrapper up-section__wrapper-404">
+                    <div class="up-section__block up-section__block-404">
+                        <div class="up-section__crochka">
+                            <a href="./">Home</a>
+                            <span> > </span>
+                            <a href="./404.html">404 - Page not found</a>
+                        </div>
+                        <img class="up-section__img" src="./img/404.png" alt="404Eror" />
+                        <h1 class="up-section__title">
+                            oops, Page not found...
+                        </h1>
+                        <p class="up-section__text">
+                           The page rolled a zero! But all the best casino reviews, bonuses, and pokies are still waiting for you.
+                        </p>
+                        <a class="up-section__btn" href="./">Go to Home</a>
+                    </div>
+                </div>
+            </div>
+        </section>
 		<section class="providers">
 			<div class="container">
 				<div class="provider__wrapper">
