--- a/index.html
+++ b/index.html
@@ -1430,7 +1430,7 @@
 						<div class="category__partners-block">
 							<div class="category__item-block">
 								<div class="category__img-item">
-									<img src="./img/partners/caswino.png" alt="" />
+									<img src="./img/partners/caswino.webp" alt="" />
 								</div>
 								<div class="category__info-item">
 									<h3 class="category__title-item">Caswino</h3>
@@ -1447,7 +1447,7 @@
 
 							<div class="category__item-block">
 								<div class="category__img-item">
-									<img src="./img/partners/caswino.png" alt="" />
+									<img src="./img/partners/caswino.webp" alt="" />
 								</div>
 								<div class="category__info-item">
 									<h3 class="category__title-item">Caswino</h3>
@@ -1464,7 +1464,7 @@
 
 							<div class="category__item-block">
 								<div class="category__img-item">
-									<img src="./img/partners/caswino.png" alt="" />
+									<img src="./img/partners/caswino.webp" alt="" />
 								</div>
 								<div class="category__info-item">
 									<h3 class="category__title-item">Caswino</h3>
@@ -1481,7 +1481,7 @@
 
 							<div class="category__item-block">
 								<div class="category__img-item">
-									<img src="./img/partners/caswino.png" alt="" />
+									<img src="./img/partners/caswino.webp" alt="" />
 								</div>
 								<div class="category__info-item">
 									<h3 class="category__title-item">Caswino</h3>
